@@ -9,6 +9,8 @@
  - fix: plot layout not correctly resized sometimes
  - fix: size of plot part in block matrix not always adjusted
  - fix: use sample names from session in export file names (#14)
+ - fix: when exporting data or computing statistics, don't export
+   data from disabled filter rays (#15)
 2.0.0a27
  - feat: add developer mode
  - feat: display images on hover in polygon window in QuickView
